# fast_frontier_detection

./: CMakeLists.txt  README.md  package.xml
include/fast_frontier_detection/: Contour.h  contour.h  frontierDB.h
src/: FFD.cpp  FFD.h  FFD_main.cpp  contour.cpp  ffd_main.cpp  frontierDB.cpp
